--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "canvas": "^2.11.2",
     "core-js": "^3.31.0",
     "cross-env": "^7.0.3",
+    "daisyui": "^3.1.7",
     "es-module-shims": "1.4.7",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
@@ -48,6 +49,7 @@
     "streamqueue": "^1.1.2",
     "stylelint": "^15.9.0",
     "stylelint-prettier": "^3.0.0",
+    "tailwindcss": "^3.3.2",
     "terser": "^5.18.1",
     "through2": "^4.0.2",
     "ttest": "^4.0.0",
@@ -63,6 +65,7 @@
   },
   "scripts": {
     "webpack": "webpack --config webpack.config.js --mode=development --watch",
+    "tailwind": "npx tailwindcss -i ./web/react/app.css -o ./web/react/dist/main.css --watch",
     "postinstall": "cross-env PUPPETEER_PRODUCT=firefox node node_modules/puppeteer/install.js"
   },
   "repository": {
@@ -77,8 +80,11 @@
     "css-loader": "^6.8.1",
     "mini-css-extract-plugin": "^2.7.6",
     "node-polyfill-webpack-plugin": "^2.0.1",
+    "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3"
   }
 }
