--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@babel/parser": "^7.22.7",
+    "@babel/traverse": "^7.22.8",
     "css-loader": "^6.8.1",
     "mini-css-extract-plugin": "^2.7.6",
     "node-polyfill-webpack-plugin": "^2.0.1",
