--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/pdf2png.js"
+            "program": "${workspaceFolder}/ana.mjs"
         }
     ]
 }
